splash/balloons/releasetheballoons.css
#maincontent {
  margin-bottom: 130px;
}
#footer {
  z-index: 105;
}
#releasetheballoons {
  position: absolute;
  top: -74px;
  width: 100%;
  text-align: center;
}
#releasetheballoons img:hover {
  cursor: pointer;
}
.balloon-message { 
  text-align: center;
  border: 1px dotted #eae7d5;
  position: relative;
  top: -20px;
}
#ithinkyouvehadenough {
  background-color: #fc5629;
  text-shadow: none;
  color: white;
}
#okclicksomemore {
  background-color: #c5edab;
}

.balloon {
  z-index: 104;
  position: absolute;
  height: 180px;
  width: 150px;
  background: url(balloon.png);
  text-indent: -9999px;
}

#balloon-counter {
  float: right;
  position: relative;
  bottom: 68px;
  right: 10px;
}

#balloons-released {
  background-image: url(balloonsreleased.png);
  height: 150px;
  width: 400px;
  position: absolute;
  bottom: 24px;
  right: 0;
  text-indent: -9999px;
}

